--- a/front-end/package.json
+++ b/front-end/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "vue": "^2.6.10",
     "vue-router": "^3.0.2",
     "vuetify": "^1.5.6",
     "vuex": "^3.1.0"
