--- a/front-end/package.json
+++ b/front-end/package.json
@@ -37,15 +37,8 @@
       "eslint:recommended"
     ],
     "rules": {
-      "no-console": "off",
-      "no-unused-vars": [
-        "error",
-        {
-          "vars": "all",
-          "args": "after-used",
-          "ignoreRestSiblings": false
-        }
-      ]
+      "no-console":"off",
+      "no-unused-vars": ["error", { "vars": "all", "args": "after-used", "ignoreRestSiblings": false }]
     },
     "parserOptions": {
       "parser": "babel-eslint"
